syntax = "proto3";

package auth.auth_ticket.api;

message AuthenticateResponsePb { repeated string roles = 1; }
